--- a/css/beesComponent.css
+++ b/css/beesComponent.css
@@ -1,6 +1,6 @@
-.beeComponent{
-	width: 400px;
-	height: 400px;
+.beesComponent{
+	width: 50%;
+	height: auto;
 	background-color: #34495e;
 	color: #e67e22;
 }
